--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: node_js
 script:
   - npm run ci
-  - firebase deploy --token "${FIREBASE_TOKEN}" --message "Deploy @ ${TRAVIS_COMMIT}"
+  - |
+    if [ "${TRAVIS_BRANCH}" = 'master' -a "${TRAVIS_PULL_REQUEST}" = 'false' ]; then
+      firebase deploy --token "${FIREBASE_TOKEN}" --message "Deploy @ ${TRAVIS_COMMIT}";
+    fi
