--- a/package.json
+++ b/package.json
@@ -19,20 +19,20 @@
     "@11ty/eleventy": "^0.5.4",
     "@11ty/eleventy-plugin-rss": "^1.0.3",
     "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.0",
-    "autoprefixer": "^9.1.5",
+    "autoprefixer": "^9.2.1",
     "babel-minify": "^0.5.0",
     "cssnano": "^4.1.4",
-    "firebase-tools": "^4.2.1",
+    "firebase-tools": "^5.1.1",
     "he": "^1.2.0",
     "html-minifier": "^3.5.20",
-    "luxon": "^1.4.0",
+    "luxon": "^1.4.3",
     "markdown-it": "^8.4.2",
     "markdown-it-anchor": "^5.0.2",
     "markdown-it-footnote": "^3.0.1",
     "markdownlint-cli": "^0.13.0",
     "postcss-cli": "^6.0.0",
-    "postcss-custom-properties": "^8.0.6",
+    "postcss-custom-properties": "^8.0.8",
     "superstatic": "^6.0.3",
-    "workbox-cli": "^3.6.2"
+    "workbox-cli": "^4.0.0-alpha.0"
   }
 }
