--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "html": "html-minifier --config-file=.html-minifier.json --input-dir=dist --output-dir=dist --file-ext=html",
     "css": "postcss src/_css/main.css --output dist/_css/main.css",
     "js": "mkdir -p dist/_js && minify --mangle.topLevel src/_js/main.mjs --outFile dist/_js/main.mjs && minify --mangle.topLevel src/_js/legacy.js --outFile dist/_js/legacy.js",
+    "json": "json-minify src/.webmanifest > dist/.webmanifest",
     "sw": "workbox injectManifest workbox-config.js && minify dist/sw.js --outFile dist/sw.js",
     "clean": "rm -rf -- dist",
-    "build": "npm run clean && npm run css && npm run js && npm run eleventy && npm run sw && npm run html",
+    "build": "npm run clean && npm run css && npm run js && npm run json && npm run eleventy && npm run sw && npm run html",
     "watch": "npm run build && npx eleventy --watch",
     "debug": "DEBUG=* npx eleventy",
     "start": "superstatic --port=9001",
@@ -25,6 +26,7 @@
     "firebase-tools": "^6.1.2",
     "he": "^1.2.0",
     "html-minifier": "^3.5.21",
+    "json-minify": "^1.0.0",
     "luxon": "^1.8.2",
     "markdown-it": "^8.4.2",
     "markdown-it-anchor": "^5.0.2",
