--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "css": "postcss src/_css/main.css --output dist/_css/main.css",
     "js": "mkdir -p dist/_js && minify --mangle.topLevel src/_js/main.mjs --outFile dist/_js/main.mjs && minify --mangle.topLevel src/_js/legacy.js --outFile dist/_js/legacy.js",
     "json": "json-minify src/.webmanifest > dist/.webmanifest",
+    "xml": "minify-xml --in-place dist/sitemap.xml && minify-xml --in-place dist/blog.atom",
     "sw": "workbox injectManifest workbox-config.js && minify dist/sw.js --outFile dist/sw.js",
     "clean": "rm -rf -- dist",
-    "build": "npm run clean && npm run css && npm run js && npm run json && npm run eleventy && npm run sw && npm run html",
+    "build": "npm run clean && npm run css && npm run js && npm run json && npm run eleventy && npm run sw && npm run xml && npm run html",
     "watch": "npm run build && npx eleventy --watch",
     "debug": "DEBUG=* npx eleventy",
     "start": "superstatic --port=9001",
@@ -33,6 +34,7 @@
     "markdown-it-attrs": "^2.3.2",
     "markdown-it-footnote": "^3.0.1",
     "markdownlint-cli": "^0.13.0",
+    "minify-xml": "^1.0.3",
     "postcss-cli": "^6.0.1",
     "postcss-custom-properties": "^8.0.9",
     "superstatic": "^6.0.4",
