--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "deploy": "firebase deploy",
     "ci": "npm run lint && npm run build"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
+  },
   "devDependencies": {
     "@11ty/eleventy": "^0.6.0",
     "@11ty/eleventy-plugin-rss": "^1.0.5",
@@ -27,6 +32,7 @@
     "firebase-tools": "^6.2.2",
     "he": "^1.2.0",
     "html-minifier": "^3.5.21",
+    "husky": "^1.3.1",
     "json-minify": "^1.0.0",
     "luxon": "^1.9.0",
     "markdown-it": "^8.4.2",
