--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "markdown-it-anchor": "^5.0.2",
     "markdown-it-attrs": "^2.3.2",
     "markdown-it-footnote": "^3.0.1",
+    "markdown-it-table-of-contents": "^0.4.3",
     "markdownlint-cli": "^0.13.0",
     "minify-xml": "^1.0.3",
     "postcss-cli": "^6.1.0",
