--- a/package.json
+++ b/package.json
@@ -28,15 +28,15 @@
     "@11ty/eleventy": "^0.7.1",
     "@11ty/eleventy-plugin-rss": "^1.0.5",
     "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.1",
-    "autoprefixer": "^9.4.6",
+    "autoprefixer": "^9.4.7",
     "babel-minify": "^0.5.0",
     "cssnano": "^4.1.8",
-    "firebase-tools": "^6.3.0",
+    "firebase-tools": "^6.3.1",
     "he": "^1.2.0",
     "html-minifier": "^3.5.21",
     "husky": "^1.3.1",
     "json-minify": "^1.0.0",
-    "luxon": "^1.10.0",
+    "luxon": "^1.11.1",
     "markdown-it": "^8.4.2",
     "markdown-it-anchor": "^5.0.2",
     "markdown-it-attrs": "^2.3.2",
@@ -47,6 +47,6 @@
     "postcss-cli": "^6.1.1",
     "postcss-custom-properties": "^8.0.9",
     "superstatic": "^6.0.4",
-    "workbox-cli": "^4.0.0-alpha.0"
+    "workbox-cli": "^4.0.0-rc.0"
   }
 }
