--- a/package.json
+++ b/package.json
@@ -26,27 +26,27 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^0.7.1",
-    "@11ty/eleventy-plugin-rss": "^1.0.5",
+    "@11ty/eleventy-plugin-rss": "^1.0.6",
     "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.1",
-    "autoprefixer": "^9.4.7",
+    "autoprefixer": "^9.4.9",
     "babel-minify": "^0.5.0",
-    "cssnano": "^4.1.8",
-    "firebase-tools": "^6.3.1",
+    "cssnano": "^4.1.10",
+    "firebase-tools": "^6.4.0",
     "he": "^1.2.0",
     "html-minifier": "^3.5.21",
     "husky": "^1.3.1",
     "json-minify": "^1.0.0",
-    "luxon": "^1.11.1",
+    "luxon": "^1.11.3",
     "markdown-it": "^8.4.2",
     "markdown-it-anchor": "^5.0.2",
     "markdown-it-attrs": "^2.3.2",
     "markdown-it-footnote": "^3.0.1",
-    "markdownlint-cli": "^0.13.0",
+    "markdownlint-cli": "^0.14.0",
     "minify-xml": "^1.0.3",
     "post-npm-install": "^1.0.0",
-    "postcss-cli": "^6.1.1",
+    "postcss-cli": "^6.1.2",
     "postcss-custom-properties": "^8.0.9",
     "superstatic": "^6.0.4",
-    "workbox-cli": "^4.0.0-rc.0"
+    "workbox-cli": "^4.0.0"
   }
 }
