--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "scripts": {
     "lint": "markdownlint src/**/*.md",
+    "intrinsicsize": "node add-intrinsicsize.js",
     "eleventy": "eleventy",
     "html": "html-minifier --config-file=.html-minifier.json --input-dir=dist --output-dir=dist --file-ext=html",
     "css": "postcss src/_css/main.css --output dist/_css/main.css",
@@ -32,9 +33,11 @@
     "babel-minify": "^0.5.0",
     "cssnano": "^4.1.10",
     "firebase-tools": "^6.5.2",
+    "glob": "^7.1.3",
     "he": "^1.2.0",
     "html-minifier": "^4.0.0",
     "husky": "^1.3.1",
+    "image-size": "^0.7.3",
     "json-minify": "^1.0.0",
     "luxon": "^1.12.0",
     "markdown-it": "^8.4.2",
@@ -46,6 +49,7 @@
     "post-npm-install": "^1.0.0",
     "postcss-cli": "^6.1.2",
     "postcss-custom-properties": "^8.0.10",
+    "string.prototype.matchall": "^3.0.1",
     "superstatic": "^6.0.4",
     "workbox-cli": "^4.2.0"
   }
