Add /features section

--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
     "lint": "markdownlint src/**/*.md",
     "eleventy": "eleventy",
     "html": "html-minifier --config-file=.html-minifier.json --input-dir=dist --output-dir=dist --file-ext=html",
-    "css": "postcss src/_css/main.css --output dist/_css/main.css",
+    "css": "postcss src/_css/main.css --output dist/_css/main.css && postcss src/_css/feature-support.css --output dist/_css/feature-support.css",
     "js": "mkdir -p dist/_js && minify --mangle.topLevel src/_js/main.mjs --outFile dist/_js/main.mjs && minify --mangle.topLevel src/_js/legacy.js --outFile dist/_js/legacy.js",
     "json": "json-minify src/.webmanifest > dist/.webmanifest",
-    "xml": "minify-xml --in-place dist/sitemap.xml && minify-xml --in-place dist/blog.atom",
+    "xml": "minify-xml --in-place dist/sitemap.xml && minify-xml --in-place dist/blog.atom && minify-xml --in-place dist/features.atom",
     "sw": "workbox injectManifest workbox-config.js && minify dist/sw.js --outFile dist/sw.js",
+    "copy-img": "for browser in {chrome,firefox}; do cp ./node_modules/@browser-logos/${browser}/${browser}.svg src/_css/img/${browser}.svg; done; cp ./node_modules/@browser-logos/safari/safari_256x256.png src/_css/img/safari.png",
     "img": "node add-intrinsicsize.js",
     "clean": "rm -rf -- dist",
-    "build": "npm run clean && npm run css && npm run js && npm run json && npm run eleventy && npm run sw && npm run xml && npm run html",
+    "build": "npm run clean && npm run css && npm run js && npm run json && npm run copy-img && npm run eleventy && npm run sw && npm run xml && npm run html",
     "watch": "npm run build && npx eleventy --watch",
     "debug": "DEBUG=* npx eleventy",
     "start": "superstatic --port=9001",
@@ -29,6 +30,9 @@
     "@11ty/eleventy": "^0.8.3",
     "@11ty/eleventy-plugin-rss": "^1.0.6",
     "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.3",
+    "@browser-logos/chrome": "^1.0.11",
+    "@browser-logos/firefox": "^2.0.5",
+    "@browser-logos/safari": "^1.0.4",
     "autoprefixer": "^9.5.1",
     "babel-minify": "^0.5.0",
     "cssnano": "^4.1.10",
