Serve /features.atom as UTF-8

--- a/firebase.json
+++ b/firebase.json
@@ -50,7 +50,7 @@
         }]
       },
       {
-        "source": "/blog.atom",
+        "source": "/*.atom",
         "headers": [{
           "key": "Content-Type",
           "value": "application/atom+xml;charset=utf-8"
