--- a/firebase.json
+++ b/firebase.json
@@ -32,6 +32,11 @@
         "source": "/docs/node-next-generation",
         "destination": "https://v8.dev/docs/node-integration",
         "type": 301
+      },
+      {
+        "source": "/features/weakrefs",
+        "destination": "https://v8.dev/features/weak-references",
+        "type": 301
       }
     ],
     "headers": [
