Use shelljs/shx for Windows build support
Make sure that the Website can be built on Windows natively.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: node_js
+os:
+  - linux
+  - osx
+  # - windows - doesn't work for now, see https://github.com/jasongin/nvs/issues/113#issuecomment-521211564
 script:
   - npm run ci
   - |
-    if [ "${TRAVIS_BRANCH}" = 'master' -a "${TRAVIS_PULL_REQUEST}" = 'false' ]; then
+    if [ "${TRAVIS_BRANCH}" = 'master' -a "${TRAVIS_PULL_REQUEST}" = 'false' -a "${TRAVIS_OS_NAME}" = 'linux' ]; then
       firebase deploy --token "${FIREBASE_TOKEN}" --message "Deploy @ ${TRAVIS_COMMIT}";
     fi
