--- a/firebase.json
+++ b/firebase.json
@@ -29,6 +29,11 @@
         "type": 301
       },
       {
+        "source": "/blog/release-52",
+        "destination": "https://v8.dev/blog/v8-release-52",
+        "type": 301
+      },
+      {
         "source": "/docs/node-next-generation",
         "destination": "https://v8.dev/docs/node-integration",
         "type": 301
