One single CSS file instead of conditional loading

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "lint": "markdownlint \"src/**/*.md\"",
     "eleventy": "eleventy",
     "html": "html-minifier --config-file=.html-minifier.json --input-dir=dist --output-dir=dist --file-ext=html",
-    "css": "postcss src/_css/main.css --output dist/_css/main.css && postcss src/_css/dark.css --output dist/_css/dark.css && postcss src/_css/light.css --output dist/_css/light.css && postcss src/_css/feature-support.css --output dist/_css/feature-support.css",
+    "css": "postcss src/_css/main.css --output dist/_css/main.css && postcss src/_css/feature-support.css --output dist/_css/feature-support.css",
     "js": "shx mkdir -p dist/_js && minify --mangle.topLevel --sourceType module src/_js/main.mjs --outFile dist/_js/main.mjs && minify --mangle.topLevel src/_js/legacy.js --outFile dist/_js/legacy.js && minify --mangle.topLevel src/_js/twitter-widget.js --outFile dist/_js/twitter-widget.js",
     "json": "json-minify src/.webmanifest > dist/.webmanifest",
     "xml": "minify-xml --in-place dist/sitemap.xml && minify-xml --in-place dist/blog.atom && minify-xml --in-place dist/features.atom",
