--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
     "eleventy": "eleventy",
     "html": "html-minifier --config-file=.html-minifier.json --input-dir=dist --output-dir=dist --file-ext=html",
     "css": "postcss src/_css/main.css --output dist/_css/main.css && postcss src/_css/feature-support.css --output dist/_css/feature-support.css",
-    "js": "shx mkdir -p dist/_js && minify --mangle.topLevel src/_js/main.mjs --outFile dist/_js/main.mjs && minify --mangle.topLevel src/_js/legacy.js --outFile dist/_js/legacy.js",
+    "js": "shx mkdir -p dist/_js && minify --mangle.topLevel --sourceType module src/_js/main.mjs --outFile dist/_js/main.mjs && minify --mangle.topLevel src/_js/legacy.js --outFile dist/_js/legacy.js",
     "json": "json-minify src/.webmanifest > dist/.webmanifest",
     "xml": "minify-xml --in-place dist/sitemap.xml && minify-xml --in-place dist/blog.atom && minify-xml --in-place dist/features.atom",
     "sw": "workbox injectManifest workbox-config.js && minify dist/sw.js --outFile dist/sw.js",
     "copy-img": "shx cp ./node_modules/@browser-logos/{chrome,firefox}/*.svg src/_css/img/ && shx cp ./node_modules/@browser-logos/safari/safari_256x256.png src/_css/img/safari.png",
+    "copy-js": "shx cp ./node_modules/dark-mode-toggle/dist/dark-mode-toggle.min.mjs dist/_js/dark-mode-toggle.mjs",
     "img": "node add-image-dimensions.js",
     "clean": "shx rm -rf -- dist",
-    "build": "npm run clean && npm run css && npm run js && npm run json && npm run copy-img && npm run eleventy && npm run sw && npm run xml && npm run html",
+    "build": "npm run clean && npm run css && npm run js && npm run json && npm run copy-img && npm run copy-js && npm run eleventy && npm run sw && npm run xml && npm run html",
     "watch": "npm run build && npx eleventy --watch",
+    "serve": "npx eleventy --serve",
     "debug": "DEBUG=* npx eleventy",
     "start": "superstatic --port=9001",
     "deploy": "firebase deploy",
@@ -36,6 +38,7 @@
     "autoprefixer": "^9.6.1",
     "babel-minify": "^0.5.1",
     "cssnano": "^4.1.10",
+    "dark-mode-toggle": "^0.4.9",
     "firebase-tools": "^7.2.4",
     "glob": "^7.1.4",
     "he": "^1.2.0",
