--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "js": "shx mkdir -p dist/_js && babel --sourceType module src/_js/main.mjs --out-file dist/_js/main.mjs && babel src/_js/legacy.js --out-file dist/_js/legacy.js",
     "json": "json-minify src/.webmanifest > dist/.webmanifest",
     "xml": "minify-xml --in-place dist/sitemap.xml && minify-xml --in-place dist/blog.atom && minify-xml --in-place dist/features.atom",
-    "sw": "workbox injectManifest workbox-config.js && minify dist/sw.js --outFile dist/sw.js",
+    "sw": "workbox injectManifest workbox-config.js && babel dist/sw.js --out-file dist/sw.js",
     "copy-img": "shx cp ./node_modules/@browser-logos/{chrome,firefox}/*.svg src/_css/img/ && shx cp ./node_modules/@browser-logos/safari/safari_256x256.png src/_css/img/safari.png",
     "copy-js": "shx cp ./node_modules/dark-mode-toggle/dist/dark-mode-toggle.min.mjs dist/_js/dark-mode-toggle.mjs",
     "img": "node add-image-dimensions.js",
@@ -33,12 +33,12 @@
     "@11ty/eleventy-plugin-rss": "^1.0.6",
     "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.3",
     "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@browser-logos/chrome": "^1.0.12",
     "@browser-logos/firefox": "^2.0.5",
     "@browser-logos/safari": "^1.0.4",
     "autoprefixer": "^9.6.1",
-    "babel-minify": "^0.5.1",
     "babel-preset-minify": "^0.5.1",
     "cssnano": "^4.1.10",
     "dark-mode-toggle": "^0.4.10",
