Re-remove comments from output

--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,6 @@
       "topLevel": true
     }
   }]],
-  "plugins": ["@babel/plugin-syntax-dynamic-import"]
+  "plugins": ["@babel/plugin-syntax-dynamic-import"],
+  "comments": false
 }
