--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "markdown-it-attrs": "^3.0.1",
     "markdown-it-container": "^2.0.0",
     "markdown-it-footnote": "^3.0.2",
+    "markdown-it-multimd-table": "^4.0.0",
     "markdownlint-cli": "^0.18.0",
     "minify-xml": "^1.0.3",
     "post-npm-install": "^2.0.0",
