--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
+    - uses: xt0rted/markdownlint-problem-matcher@v1
     - run: npm install
     - run: npm run ci
       env:
