--- a/firebase.json
+++ b/firebase.json
@@ -19,6 +19,31 @@
         "type": 301
       },
       {
+        "source": "/bug/(?P<id>v[0-9]+)",
+        "destination": "https://bugs.chromium.org/p/v8/issues/detail?id=:id",
+        "type": 301
+      },
+      {
+        "source": "/tools/(?P<version>v[0-9]+.+)/tool*",
+        "destination": "https://v8.github.io/tools/:version/:tool",
+        "type": 301
+      },
+      {
+        "source": "/tools/:tool*",
+        "destination": "https://v8.github.io/tools/head/:tool",
+        "type": 301
+      },
+      {
+        "source": "/api/(?P<version>v[0-9]+.+)/:api*",
+        "destination": "https://v8.github.io/api/:version/:api",
+        "type": 301
+      },
+      {
+        "source": "/api/:api*",
+        "destination": "https://v8.github.io/api/head/:api",
+        "type": 301
+      },
+      {
         "source": "/bugs",
         "destination": "https://bugs.chromium.org/p/v8/issues/list",
         "type": 301
