--- a/firebase.json
+++ b/firebase.json
@@ -9,18 +9,13 @@
         "type": 301
       },
       {
-        "source": "/git",
-        "destination": "https://chromium.googlesource.com/v8/v8.git",
+        "source": "/api/(?P<version>v[0-9]+.+)/:api*",
+        "destination": "https://v8.github.io/api/:version/:api",
         "type": 301
       },
       {
-        "source": "/bug",
-        "destination": "https://bugs.chromium.org/p/v8/issues/entry",
-        "type": 301
-      },
-      {
-        "source": "/bugs",
-        "destination": "https://bugs.chromium.org/p/v8/issues/list",
+        "source": "/api/:api*",
+        "destination": "https://v8.github.io/api/head/:api",
         "type": 301
       },
       {
@@ -34,6 +29,21 @@
         "type": 301
       },
       {
+        "source": "/bug",
+        "destination": "https://bugs.chromium.org/p/v8/issues/entry",
+        "type": 301
+      },
+      {
+        "source": "/bug/(?P<id>v[0-9]+)",
+        "destination": "https://bugs.chromium.org/p/v8/issues/detail?id=:id",
+        "type": 301
+      },
+      {
+        "source": "/bugs",
+        "destination": "https://bugs.chromium.org/p/v8/issues/list",
+        "type": 301
+      },
+      {
         "source": "/docs/node-next-generation",
         "destination": "https://v8.dev/docs/node-integration",
         "type": 301
@@ -41,6 +51,21 @@
       {
         "source": "/features/weakrefs",
         "destination": "https://v8.dev/features/weak-references",
+        "type": 301
+      },
+      {
+        "source": "/git",
+        "destination": "https://chromium.googlesource.com/v8/v8.git",
+        "type": 301
+      },
+      {
+        "source": "/tools/(?P<version>v[0-9]+.+)/tool*",
+        "destination": "https://v8.github.io/tools/:version/:tool",
+        "type": 301
+      },
+      {
+        "source": "/tools/:tool*",
+        "destination": "https://v8.github.io/tools/head/:tool",
         "type": 301
       }
     ],
