--- a/firebase.json
+++ b/firebase.json
@@ -9,8 +9,13 @@
         "type": 301
       },
       {
-        "source": "/api/(?P<version>v[0-9]+.+)/:api*",
-        "destination": "https://v8.github.io/api/:version/:api",
+        "source": "/api",
+        "destination": "https://v8.github.io/api/head/",
+        "type": 301
+      },
+      {
+        "regex": "/api/(?P<version>v[0-9]+.*)",
+        "destination": "https://v8.github.io/api/:version",
         "type": 301
       },
       {
@@ -34,7 +39,7 @@
         "type": 301
       },
       {
-        "source": "/bug/(?P<id>v[0-9]+)",
+        "regex": "/bug/(?P<id>v[0-9]+)",
         "destination": "https://bugs.chromium.org/p/v8/issues/detail?id=:id",
         "type": 301
       },
@@ -59,8 +64,13 @@
         "type": 301
       },
       {
-        "source": "/tools/(?P<version>v[0-9]+.+)/tool*",
-        "destination": "https://v8.github.io/tools/:version/:tool",
+        "source": "/tools",
+        "destination": "https://v8.github.io/tools/head/",
+        "type": 301
+      }
+      {
+        "regex": "/tools/(?P<version>v[0-9]+.*)",
+        "destination": "https://v8.github.io/tools/:version",
         "type": 301
       },
       {
