Add Research to top menu
 - Add Research to the top menu, for now pointing to Research Grant page. In the future it will point to a separate Research page.
 - Add a temporary /research redirect to point to /grant for now, to be changed in the future.

--- a/firebase.json
+++ b/firebase.json
@@ -9,6 +9,11 @@
         "type": 301
       },
       {
+        "source": "/research",
+        "destination": "/grant",
+        "type": 302
+      },
+      {
         "source": "/api/(?P<version>v[0-9]+.+)/:api*",
         "destination": "https://v8.github.io/api/:version/:api",
         "type": 301
