--- a/firebase.json
+++ b/firebase.json
@@ -64,7 +64,7 @@
         "type": 301
       },
       {
-        "regex": "/tools/(v[0-9]+.*)",
+        "regex": "\\/tools\\/(v[0-9]+.*)",
         "destination": "https://v8.github.io/tools/:1",
         "type": 301
       }
