Deprecate `npm run serve`
It was accidentally introduced in https://github.com/v8/v8.dev/commit/d9b0fe9799bd9b3b7a2d7f9abcadf042e246d86e. We already have a way to serve v8.dev locally through `npm start`.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clean": "shx rm -rf -- dist",
     "build": "npm run clean && npm run css && npm run js && npm run json && npm run copy-img && npm run copy-js && npm run eleventy && npm run sw && npm run xml && npm run html",
     "watch": "npm run build && npx eleventy --watch",
-    "serve": "npx eleventy --serve",
+    "serve": "npm start",
     "debug": "DEBUG=* npx eleventy",
     "start": "superstatic --port=9001",
     "deploy": "firebase deploy",
