upadte firebase tools to 8.5.0 and add regex redirects

--- a/firebase.json
+++ b/firebase.json
@@ -59,13 +59,13 @@
         "type": 301
       },
       {
-        "source": "/tools",
-        "destination": "https://v8.github.io/tools/head/",
+        "regex": "/tools/(?P<version>v[0-9]+.*)",
+        "destination": "//v8.github.io/tools/:version",
         "type": 301
       },
       {
-        "regex": "/tools/(?P<version>v[0-9]+.*)",
-        "destination": "//v8.github.io/tools/:version",
+        "source": "/tools/:tool*",
+        "destination": "https://v8.github.io/tools/head/:tool",
         "type": 301
       }
     ],
