--- a/firebase.json
+++ b/firebase.json
@@ -65,11 +65,16 @@
       },
       {
         "source": "/tools)",
+        "destination": "https://v8.github.io/tools/head",
+        "type": 301
+      },
+      {
+        "source": "/tools/versions)",
         "destination": "https://v8.github.io/tools/",
         "type": 301
       },
       {
-        "source": "/tools/:tool*)",
+        "source": "/tools/:tool*",
         "destination": "https://v8.github.io/tools/head/:tool",
         "type": 301
       }
