--- a/firebase.json
+++ b/firebase.json
@@ -69,7 +69,7 @@
         "type": 301
       },
       {
-        "source": "/tools/versions)",
+        "source": "/tools/versions",
         "destination": "https://v8.github.io/tools/",
         "type": 301
       },
