Restore proper JavaScript MIME type
We want to serve JavaScript files as `text/javascript` per the recommendation in the HTML Standard. At the same time, we want to avoid serving a non-JavaScript file whose URL happens to end with `.js` as if it were JavaScript.

This patch tightens the rules to ensure only known JavaScript files are matched.

Ref. #464, #465.

--- a/firebase.json
+++ b/firebase.json
@@ -82,10 +82,33 @@
     "headers": [
       {
         "source": "/sw.js",
-        "headers": [{
-          "key": "Cache-Control",
-          "value": "no-cache"
-        }]
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache"
+          },
+          {
+            "key": "Content-Type",
+            "value": "text/javascript;charset=utf-8"
+          },
+          {
+            "key": "Cache-Control",
+            "value": "max-age=31557600"
+          }
+        ]
+      },
+      {
+        "source": "/_js/*.@(js|mjs)",
+        "headers": [
+          {
+            "key": "Content-Type",
+            "value": "text/javascript;charset=utf-8"
+          },
+          {
+            "key": "Cache-Control",
+            "value": "max-age=31557600"
+          }
+        ]
       },
       {
         "source": "/*.atom",
@@ -102,7 +125,7 @@
         }]
       },
       {
-        "source": "**/*.@(mjs|js|css)",
+        "source": "/_css/*.css",
         "headers": [{
           "key": "Cache-Control",
           "value": "max-age=31557600"
