--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,12 @@
-name: Preview
+name: Deploy to Firebase Hosting on merge
 
-on: [pull_request]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-  deploy_preview:
+  deploy_website:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -14,7 +17,7 @@ jobs:
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_V8_DEV }}"
+          channelId: live
           projectId: v8-dev
-          expires: 30d
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
