--- a/firebase.json
+++ b/firebase.json
@@ -14,12 +14,12 @@
         "type": 302
       },
       {
-        "regex": "/api/(?P<version_api>v[0-9]+.*)",
-        "destination": "https://v8.github.io/api/:version_api",
+        "regex": "/api/(?P<api>v[0-9]+.*)",
+        "destination": "https://v8.github.io/api/:api",
         "type": 301
       },
       {
-        "regex": "/api(?P<api>/.*)",
+        "regex": "/api(?P<api>(/.*)?)",
         "destination": "https://v8.github.io/api/head:api",
         "type": 301
       },
@@ -59,13 +59,8 @@
         "type": 301
       },
       {
-        "regex": "/tools/(?P<version_tool>v[0-9]+.*)",
-        "destination": "https://v8.github.io/tools/:version_tool",
-        "type": 301
-      },
-      {
-        "source": "/tools",
-        "destination": "https://v8.github.io/tools/head",
+        "regex": "/tools/(?P<tool>v[0-9]+.*)",
+        "destination": "https://v8.github.io/tools/:tool",
         "type": 301
       },
       {
@@ -74,10 +69,10 @@
         "type": 301
       },
       {
-        "source": "/tools/:tool*",
-        "destination": "https://v8.github.io/tools/head/:tool",
+        "regex": "/tools(?P<tool>(/.*)?)",
+        "destination": "https://v8.github.io/tools/head:tool",
         "type": 301
-      }
+      },
     ],
     "headers": [
       {
