--- a/firebase.json
+++ b/firebase.json
@@ -14,18 +14,13 @@
         "type": 302
       },
       {
-        "source": "/api/v:version*",
-        "destination": "https://v8.github.io/api/v:version",
-        "type": 301
-      },
-      {
         "source": "/api",
         "destination": "https://v8.github.io/api/head",
         "type": 301
       },
       {
         "source": "/api/:api*",
-        "destination": "https://v8.github.io/api/head/:api",
+        "destination": "https://v8.github.io/api/:api",
         "type": 301
       },
       {
@@ -64,18 +59,18 @@
         "type": 301
       },
       {
+        "source": "/tools",
+        "destination": "https://v8.github.io/tools/head",
+        "type": 301
+      },
+      {
         "source": "/tools/versions",
         "destination": "https://v8.github.io/tools/",
         "type": 301
       },
       {
-        "source": "/tools/v:tool*",
-        "destination": "https://v8.github.io/tools/v:tool",
-        "type": 301
-      },
-      {
         "source": "/tools/:tool",
-        "destination": "https://v8.github.io/tools/head:tool",
+        "destination": "https://v8.github.io/tools/:tool",
         "type": 301
       },
     ],
