Fix api and tools redirects (#491)
Simplify v8.dev/tools and v8.dev/api redirects

- Always include version (vX.Y or head) in tools and api links
- Remove complex regexp redirects

--- a/firebase.json
+++ b/firebase.json
@@ -14,13 +14,13 @@
         "type": 302
       },
       {
-        "regex": "/api/(?P<version_api>v[0-9]+.*)",
-        "destination": "https://v8.github.io/api/:version_api",
+        "source": "/api",
+        "destination": "https://v8.github.io/api/head",
         "type": 301
       },
       {
-        "regex": "/api(?P<api>/.*)",
-        "destination": "https://v8.github.io/api/head:api",
+        "source": "/api/:api*",
+        "destination": "https://v8.github.io/api/:api",
         "type": 301
       },
       {
@@ -59,11 +59,6 @@
         "type": 301
       },
       {
-        "regex": "/tools/(?P<version_tool>v[0-9]+.*)",
-        "destination": "https://v8.github.io/tools/:version_tool",
-        "type": 301
-      },
-      {
         "source": "/tools",
         "destination": "https://v8.github.io/tools/head",
         "type": 301
@@ -74,8 +69,8 @@
         "type": 301
       },
       {
-        "source": "/tools/:tool*",
-        "destination": "https://v8.github.io/tools/head/:tool",
+        "source": "/tools/:tool",
+        "destination": "https://v8.github.io/tools/:tool",
         "type": 301
       }
     ],
