Update tools redirects
Fix https://v8.dev/tools/head/* links.

--- a/firebase.json
+++ b/firebase.json
@@ -69,7 +69,7 @@
         "type": 301
       },
       {
-        "source": "/tools/:tool",
+        "source": "/tools/:tool*",
         "destination": "https://v8.github.io/tools/:tool",
         "type": 301
       }
