--- a/firebase.json
+++ b/firebase.json
@@ -133,7 +133,16 @@
         ]
       },
       {
-        "source": "**/*.@(jpg|gif|png|svg|ico|webmanifest)",
+        "source": "**/*.avif",
+        "headers": [
+          {
+            "key": "Content-Type",
+            "value": "image/avif"
+          }
+        ]
+      },
+      {
+        "source": "**/*.@(jpg|gif|png|webp|avif|svg|ico|webmanifest)",
         "headers": [
           {
             "key": "Cache-Control",
