--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -3,7 +3,7 @@ name: Build PR
 on: [pull_request]
 
 jobs:
-  deploy_preview:
+  build_preview:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
