--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_V8_DEV }}"
+          channelId: "preview-${{ github.event.workflow_run.head_branch }}"
           projectId: v8-dev
           expires: 30d
         env:
