--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -10,9 +10,11 @@ jobs:
       - run: npm install
       - run: npm run lint
       - run: npm run build
+      - run: echo ${{ github.event.number }} > event-number.gh
       - uses: actions/upload-artifact@v2
         with:
           name: preview
           path: |
+            event-number.gh
             firebase.json
             dist
