--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "json": "json-minify src/.webmanifest > dist/.webmanifest",
     "xml": "minify-xml --in-place dist/sitemap.xml && minify-xml --in-place dist/blog.atom && minify-xml --in-place dist/features.atom",
     "sw": "workbox injectManifest workbox-config.js && terser dist/sw.js -cm -o dist/sw.js",
-    "copy-img": "shx cp ./node_modules/@browser-logos/{chrome,firefox,node.js}/*.svg src/_css/img/ && shx cp ./node_modules/@browser-logos/safari/safari_256x256.png src/_css/img/safari.png",
+    "copy-img": "shx cp ./node_modules/@browser-logos/{chrome,firefox,node.js,safari}/*.svg src/_css/img/",
     "copy-js": "shx cp ./node_modules/dark-mode-toggle/dist/dark-mode-toggle.min.mjs dist/_js/dark-mode-toggle.mjs",
     "img-video-dimensions": "node add-image-and-video-dimensions.js",
     "clean": "shx rm -rf -- dist",
@@ -41,7 +41,7 @@
     "@browser-logos/chrome": "^1.0.17",
     "@browser-logos/firefox": "^3.0.8",
     "@browser-logos/node.js": "^1.0.1",
-    "@browser-logos/safari": "^1.0.7",
+    "@browser-logos/safari": "^2.1.0",
     "autoprefixer": "^9.8.2",
     "cssnano": "^4.1.10",
     "dark-mode-toggle": "^0.7.2",
