--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -3,18 +3,10 @@ name: Build PR
 on: [pull_request]
 
 jobs:
-  build_preview:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - run: npm install
       - run: npm run lint
       - run: npm run build
-      - run: echo ${{ github.event.number }} > event-number.gh
-      - uses: actions/upload-artifact@v2
-        with:
-          name: preview
-          path: |
-            event-number.gh
-            firebase.json
-            dist
