--- a/firebase.json
+++ b/firebase.json
@@ -97,7 +97,7 @@
           },
           {
             "key": "Cache-Control",
-            "value": "max-age=31557600"
+            "value": "max-age=604800"
           }
         ]
       },
@@ -124,7 +124,7 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "max-age=31557600"
+            "value": "max-age=604800"
           }
         ]
       },
@@ -133,7 +133,7 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "max-age=31557600"
+            "value": "max-age=604800"
           }
         ]
       }
